# Turing

./: .gitignore  Examples.hs  Foundation.hs  Gen.hs  Handler.hs  Home.hs  LICENSE  Machine.hs  Macro.hs  Main.hs  Parser.hs  Procfile  README.md  Widget.hs  app.json  client_session_key.aes  routes  stack.yaml  syntax.ebnf  syntax.html  turing.cabal
Examples/: Basic.hs  Sqrt.hs
static/: index.html  sqrt.txt  style.css
static/css/: pygment.css
