name:               turing
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          turing
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Home

                    Parser
                    Macro
                    Machine

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , containers
                , mtl
                , parsec
                , yesod-core
                , yesod-form
                , shakespeare >= 2.0
                , case-insensitive >= 1.2
                , text

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
