name:               turing
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple

executable turing
  main-is: Main.hs
  other-modules:
                    Parser
                    Macro
                    Machine
                    Gen 
                    Widget
                    Handler
                    Examples
                    Examples.Sqrt
                    Examples.Basic

  ghc-options:      -Wall -fwarn-tabs -O2
  cpp-options:      -DGHCJS_BROWSER

  build-depends: base
                , containers
                , mtl
                , transformers
                , parsec
                , ghcjs-dom
                , ghcjs-base
                , text
                , fclabels
                , template-haskell
                , raw-strings-qq
                

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
